# crucible

./: Cargo.toml  create_prs.sh  pr_body.md
backend/: ACCEPTANCE_CRITERIA.md  Cargo.toml  DASHBOARD_IMPLEMENTATION.md  DASHBOARD_QUICKSTART.md  README.md  TRACING_IMPLEMENTATION_SUMMARY.md  WINDOWS_TOOLCHAIN_FIX.md  compile_errors.txt
backend/benches/: dashboard_bench.rs
backend/migrations/: 20260428000000_dashboard.sql  20260429000000_build_metrics.sql  20260527000000_deployments.sql  20260528000000_audit_logs.sql  20260528215100_create_job_runs.sql  20260528220000_contract_call_logs.sql  20260531000000_contract_events.sql  20260601000000_contract_services.sql
backend/scripts/: init-db.sql
backend/src/: error.rs  jobs.rs  lib.rs  main.rs  main.rs.bak
backend/src/api/: contracts.rs  mod.rs
backend/src/api/handlers/: admin.rs  contracts.rs  dashboard.rs  deploy_health.rs  errors.rs  health.rs  mod.rs  profiling.rs  sandbox.rs  stellar.rs  ws.rs
backend/src/api/middleware/: cache.rs  logging.rs  mod.rs
backend/src/config/: database.rs  error.rs  mod.rs  observability.rs  redis.rs  reload.rs  server.rs  tests.rs
backend/src/config/defaults/: default.toml  development.toml  production.toml  staging.toml
backend/src/services/: analytics_aggregator.rs  audit.rs  business_metrics.rs  cache_invalidation.rs  circuit_breaker.rs  compilation.rs  compliance.rs  contract_call_logger.rs  contract_deployment.rs  contract_monitor.rs  contract_registry.rs  contract_storage_optimizer.rs  contract_test_results.rs  contract_versioning.rs  dedup.rs  dependency_analyzer.rs  doc_generator.rs  error_recovery.rs  event_indexer.rs  feature_flags.rs  log_alerts.rs  metrics.rs  mod.rs  sandbox.rs  security_scanner.rs  sys_metrics.rs  tracing.rs
backend/src/test_utils/: assertions.rs  client.rs  db.rs  factories.rs  fixtures.rs  mod.rs
backend/src/test_utils/factories/: order.rs  product.rs  session.rs  user.rs
backend/src/test_utils/tests/: client_tests.rs  mod.rs
backend/src/utils/: errors.rs  file_validation.rs  json_schema.rs  mod.rs
backend/src/workers/: cache_warm.rs  error.rs  executor.rs  health.rs  job_history.rs  mod.rs  progress.rs  scheduler.rs  tests.rs
backend/src/workers/jobs/: mod.rs
backend/src/workers/tests/: scheduler_tests.rs
backend/tests/: api_tests.rs  audit_tests.rs  build_metrics_tests.rs  config_tests.rs  contract_integration_tests.rs  contracts_tests.rs  dashboard_tests.rs  error_analytics_tests.rs  integration_tests.rs  load_tests.rs  sandbox_tests.rs  tracing_integration.rs
backend/tests/integration/: api_profile_test.rs  api_status_test.rs  mod.rs  services_test.rs  workers_test.rs
backend/tests/load/: dashboard_load.rs  framework.rs  mod.rs  profile_load.rs  status_load.rs  stellar_load.rs
contracts/crucible/src/: env.rs  lib.rs  macros.rs  reputation.rs
contracts/supply_chain/: Cargo.toml
contracts/supply_chain/src/: lib.rs
contracts/supply_chain/tests/: supply_chain_test.rs
contracts/treasury/: Cargo.toml
contracts/treasury/src/: lib.rs
contracts/treasury/tests/: treasury_test.rs
examples-copy/counter/: Cargo.toml
examples-copy/counter/src/: lib.rs  test.rs
examples-copy/counter/test_snapshots/test/: test_decrement_at_zero_reverts.1.json  test_decrement_decreases_count.1.json  test_double_initialize_reverts.1.json  test_fixture_reset_restores_state.1.json  test_fixture_reset_restores_state.2.json  test_increment_by_bulk.1.json  test_increment_emits_event.1.json  test_increment_increases_count.1.json  test_initialize_sets_starting_value.1.json  test_reset_clears_count.1.json  test_reset_emits_event.1.json
examples-copy/escrow/: Cargo.toml
examples-copy/escrow/src/: lib.rs  test.rs
examples-copy/escrow/test_snapshots/test/: test_arbiter_approve_allows_early_claim.1.json  test_claim_after_timeout.1.json  test_claim_before_timeout_reverts.1.json  test_create_emits_event.1.json  test_create_transfers_tokens_to_contract.1.json  test_double_claim_reverts.1.json  test_only_arbiter_can_approve.1.json  test_refund_after_timeout.1.json  test_refund_before_timeout_reverts.1.json
examples-copy/token/: Cargo.toml
examples-copy/token/src/: lib.rs  test.rs
examples-copy/token/test_snapshots/test/: test_admin_can_mint.1.json  test_balance_starts_at_zero.1.json  test_burn_reduces_balance.1.json  test_mint_emits_event.1.json  test_mint_without_auth_reverts.1.json  test_transfer_moves_balance.1.json  test_xlm_token_is_independent.1.json
examples-copy/vesting/: Cargo.toml
examples-copy/vesting/src/: lib.rs  test.rs
examples-copy/vesting/test_snapshots/test/: test_claim_after_revoke_reverts.1.json  test_claim_before_cliff_reverts.1.json  test_claim_transfers_tokens_to_beneficiary.1.json  test_full_vesting_after_duration.1.json  test_nothing_claimable_at_cliff_start.1.json  test_nothing_claimable_before_cliff.1.json  test_partial_claim_then_more.1.json  test_partial_vesting_halfway_through.1.json  test_revoke_returns_unvested_tokens_to_admin.1.json  test_vested_increases_monotonically_with_time.1.json
examples/lending/: Cargo.toml
examples/lending/src/: lib.rs  test.rs
examples/pending/src backup/: lib.rs  test.rs
examples/token copy/test_snapshots/test/: test_approve_and_transfer_from.1.json  test_burn_more_than_balance_reverts.1.json  test_transfer_from_exceeds_allowance_reverts.1.json  test_transfer_insufficient_balance_reverts.1.json
examples/token/src/: test.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/coverage/: GasCostEstimator.css.html  GasCostEstimator.tsx.html  coverage-final.json  index.html
frontend/coverage/src/: App.css.html  App.tsx.html  index.html
frontend/src/: App.css  App.test.tsx  App.tsx  index.css
frontend/src/components/: ContractAbiExplorer.css  ContractAbiExplorer.test.tsx  ContractAbiExplorer.tsx  DeveloperOnboardingTutorial.css  DeveloperOnboardingTutorial.test.tsx  DeveloperOnboardingTutorial.tsx  GasCostEstimator.css  GasCostEstimator.test.tsx  GasCostEstimator.tsx  MultiChainDashboard.css  MultiChainDashboard.test.tsx  MultiChainDashboard.tsx
(+9 files in other folders)
