[workspace]
members = [
    "contracts/crucible",
    "contracts/treasury",
    "crucible-macros",
    "examples/counter",
    "examples/token",
    "examples/vesting",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
soroban-sdk = { version = "25", features = ["testutils"] }
crucible-macros = { path = "crucible-macros" }
