[package]
name = "backend"
version = "0.1.0"
edition = "2021"
description = "Backend API server for the Crucible smart contract testing platform"
license = "MIT"
authors = ["Crucible Contributors"]

[[bin]]
name = "crucible-backend"
path = "src/main.rs"

[[bin]]
name = "backup"
path = "src/bin/backup.rs"

[[bench]]
name = "performance"
harness = false

[[bench]]
name = "dashboard_bench"
harness = false

[features]
testutils = ["mockall"]

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "migrate", "macros"] }
redis = { version = "0.27", features = ["tokio-comp", "json", "connection-manager"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenvy = "0.15"
tower = { version = "0.5", features = ["full", "util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "request-id"] }
anyhow = "1.0"
utoipa = { version = "5.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8.0", features = ["axum"] }
apalis = { version = "0.6" }
apalis-redis = "0.6"
rust_decimal = { version = "1.35", features = ["serde"] }
stellar-xdr = { version = "21.0", features = ["std"] }
base64 = "0.22"
validator = { version = "0.19", features = ["derive"] }
tower_governor = "0.4"
opentelemetry = { version = "0.24", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.24", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.17", features = ["trace", "grpc-tonic", "http-proto", "reqwest-client"] }
tracing-opentelemetry = "0.25"
opentelemetry-semantic-conventions = "0.16"
tonic = "0.12"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
config = "0.14.0"
mockall = { version = "0.13", optional = true }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
testcontainers = "0.16"
wiremock = "0.6"
hyper = { version = "1.0", features = ["full"] }
mime = "0.3"
arc-swap = "1.7"
async-trait = "0.1"
rust_decimal_macros = "1.35"
criterion = { version = "0.5", features = ["async_tokio"] }
temp-env = "0.3.6"
toml = "0.8.12"
http-body-util = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
