[package]
name = "backend"
version = "0.1.0"
edition = "2021"
description = "Backend API server for the Crucible smart contract testing platform"
license = "MIT"
authors = ["Crucible Contributors"]

[[bin]]
name = "crucible-backend"
path = "src/main.rs"

[[bin]]
name = "backup"
path = "src/bin/backup.rs"

[features]
testutils = ["mockall"]

[dependencies]
url = { version = "2", features = ["serde"] }
# Web framework
axum = { version = "0.7", features = ["macros", "ws"] }
tower = { version = "0.5", features = ["full", "util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "request-id"] }
tower_governor = "0.4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database (Keep 0.8 from feature branch)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "migrate", "macros", "rust_decimal"] }

# Redis (Keep 0.27 from feature branch)
redis = { version = "0.27", features = ["tokio-comp", "json", "connection-manager"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = { version = "0.24", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.17", features = ["trace", "grpc-tonic"] }
opentelemetry-semantic-conventions = "0.16"
opentelemetry_sdk = { version = "0.24", features = ["trace", "rt-tokio"] }
tracing-opentelemetry = "0.25"
tonic = "0.12"

# OpenTelemetry (Upgrade to 0.31+ from main branch)
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry_sdk = { version = "0.31", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["trace", "http-proto", "reqwest-client"] }
tracing-opentelemetry = { version = "0.32", default-features = false }
opentelemetry-semantic-conventions = "0.16"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "1"
anyhow = "1.0"
arc-swap = "1.7"
async-trait = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
base64 = "0.22"
validator = { version = "0.19", features = ["derive"] }
rust_decimal = { version = "1.35", features = ["serde"] }

# Stellar
stellar-xdr = { version = "21.0", features = ["std"] }

# API documentation
utoipa = { version = "5.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8.0", features = ["axum"] }

# Background jobs
apalis = { version = "0.6" }
apalis-redis = "0.6"

# Optional: mock support for tests
mockall = { version = "0.13", optional = true }

# Scheduler
tokio-util = "0.7"
cron = "0.12"
async-trait = "0.1"
arc-swap = "1.7"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace"] }
hyper = { version = "1.0", features = ["full"] }
mime = "0.3"
tokio = { version = "1", features = ["full", "test-util"] }
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
testcontainers = "0.16"
wiremock = "0.6"
mockall = "0.13"
rust_decimal_macros = "1.35"
criterion = { version = "0.5", features = ["async_tokio"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bench]]
name = "performance"
harness = false

[[bench]]
name = "dashboard_bench"
harness = false
